# AIE9

./: .gitignore
01_Prototyping_Best_Practices_and_Vibe_Check/: README.md
02_Dense_Vector_Retrieval/: pyproject.toml
02_Dense_Vector_Retrieval_MY_ANSWERS/: Pythonic_RAG_Assignment.ipynb
02_Dense_Vector_Retrieval_V2/: .gitignore  README.md  TESTING_RESULTS.md  compare_metrics.py  demo_enhanced_rag.py  demo_enhanced_rag_completo.py  pyproject.toml  test_api_key.py  test_setup.py
02_Dense_Vector_Retrieval_V2/aimakerspace/: __init__.py
02_Dense_Vector_Retrieval_V2/notebooks/: Enhanced_RAG_Assignment.ipynb  Enhanced_RAG_with_Metadata.ipynb
03_Enhanced_RAG_MetadataFiltering/: QUICKSTART.md  SETUP.md  env.example
12_Certification_Challenge/ARIA/: .env.example  .gitignore  README.md  pyproject.toml  ragas_evaluation_results.csv  ragas_evaluation_results.json
12_Certification_Challenge/ARIA/Docs/: ARIA_WriteUp_v3.md
12_Certification_Challenge/ARIA/aria/: __init__.py
12_Certification_Challenge/ARIA/aria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
12_Certification_Challenge/ARIA/aria/agents/: __init__.py  orchestrator.py  prompts.py  state.py
12_Certification_Challenge/ARIA/aria/ingestion/: chunker.py  processor.py
12_Certification_Challenge/ARIA/aria/runpod/: tunnel.py
12_Certification_Challenge/ARIA/aria/tools/: __init__.py  retriever.py  web_search.py
12_Certification_Challenge/ARIA/aria/ui/: app.py
12_Certification_Challenge/ARIA/aria/vectorstore/: __init__.py  store.py
12_Certification_Challenge/ARIA/documents/: Listado_de_temas_de_inters_para_el_sector.docx
12_Certification_Challenge/ARIA/scripts/: categorize.py  chat.py  ingest_loreal_only.py  ragas_eval.py  run_aria.ps1  setup_runpod.sh
(+81 files in other folders)
